--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -64,13 +64,6 @@ div.bb_h1, div.bb_h2, div.bb_h3, div.bb_h4 { color:#acb2b8 !important; }
 span.updated_app_date, span.rateUpCount, a.bb_link { color:#ebebeb !important; }
 div.app_tag, div.hover_details_block_full.ellipsis { color:#ebebeb !important; background: #161a1f !important; }
 
-/* Navi */
-.navigation_bar { background-image: none !important; background-color: rgb(53, 62, 71) !important;}
-a.selected.featured, .navigation_bar > a.selected, .navigation_bar > a:hover { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); border-radius: 4px; }
-.apphub_sectionTab, a.apphub_sectionTab, .apphub_responsive_tab .responsive_tab_control { background-color: #3A3A3A !important; }
-.forumtopic_comments .commentthread_comment_text .content_check_warning, .forumtopic_comments .commentthread_comment_text .needs_content_check { color: rgb(172, 178, 184); border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; border: 1px solid #56707f; width: 480px; padding: 12px; text-align: center; border-radius: 3px; }
-.apphub_sectionTab.active > span, .apphub_responsive_tab .responsive_tab_control .responsive_tab_control_inner { background: #2b3338 !important; font-weight: bold; text-decoration: underline; }
-
 /* Startseite */
 div.home_area_spotlight, div.spotlight_weeklong_ctn, #store_nav_area .store_nav_bg, .home_page_body_ctn.has_takeover #store_nav_area .store_nav_bg, .dailydeal_countdown { background:none; background-image:none !important; background-color:#353e47 !important; }
 .searchbox { background:none; background-image:none !important; background-color:#95979a !important; }
@@ -91,6 +84,20 @@ body.v6 .store_nav .popup_block_new .popup_body, body.v6 #footer_nav .popup_bloc
 .store_nav .popup_menu .popup_menu_item, .creator .responsive_page_template_content .popup_menu .popup_menu_item, .curator .responsive_page_template_content .popup_menu .popup_menu_item, .footer_content .popup_menu .popup_menu_item, .search_area .popup_body .match, .search_area .popup_body .match .match_name, body.v6 .store_nav .popup_block_new .popup_body, body.v6 #footer_nav .popup_block_new .popup_body a { color: white !important;}
 .store_nav .tab:hover > span, .store_nav.tab:hover, .store_nav .tab.focus > span, .store_nav .tab.focus { background: #373e47 !important; color: white !important; }
 div.home_ctn.marketingmessage_area { display:none !important; }
+
+/* Navi */
+.navigation_bar { background-image: none !important; background-color: rgb(53, 62, 71) !important;}
+a.selected.featured, .navigation_bar > a.selected, .navigation_bar > a:hover { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); border-radius: 4px; }
+.apphub_sectionTab, a.apphub_sectionTab, .apphub_responsive_tab .responsive_tab_control { background-color: #3A3A3A !important; }
+.forumtopic_comments .commentthread_comment_text .content_check_warning, .forumtopic_comments .commentthread_comment_text .needs_content_check { color: rgb(172, 178, 184); border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; border: 1px solid #56707f; width: 480px; padding: 12px; text-align: center; border-radius: 3px; }
+.apphub_sectionTab.active > span, .apphub_responsive_tab .responsive_tab_control .responsive_tab_control_inner { background: #2b3338 !important; font-weight: bold; text-decoration: underline; }
+
+/* Remoteplay */
+.rpt_anywhere_header_left, .remoteplay_howto_section, .rpt_anywhere_how_ctn, .rpt_section1_container, .rpt_section2_container, .rpt_section3_container, .rpt_section4_container { background:none !important; background-color: none !important; }
+.rpt_section4_container { color:#acb2b8 !important; }
+.rpt_monsterhunter_ctn { border-radius: 50%; margin-left:120px !important; }
+.remoteplay_overcooked_section {display:none !important;}
+.btn_blue_steamui > span {box-shadow: unset !important; }
 
 /* Ausgeblendetes Zeug */
 div.game_area_description.game_area_description img { display: none !important; }
@@ -156,6 +163,7 @@ a.screenshot_showcase_smallscreenshot.screenshot_count { border: 1px solid #4a54
 .miniprofile_favorite_badge, .profile_header_badge { border: 1px solid #4a545e !important; background: #161a1f !important; }
 .profile_comment_area .commentthread_textarea { background-color:transparent !important;}
 .profile_comment_area .commentthread_entry_quotebox { min-height:50px; max-height:100px; border:1px solid #000 !important; background-color:#2f3841 !important; }
+.profile_subpage_column .maincontent, body.migrated_profile_page .profile_subpage_column #BG_bottom.maincontent {background-image:none !important;}
 
 /* Profil: Awards */
 div.profile_count_link_preview_ctn { visibility:hidden !important; }
@@ -164,15 +172,24 @@ div.profile_badges_badge { visibility:visible !important; margin-top:-40px !impo
 div.profile_group_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
 div.profile_friend_links.profile_count_link_preview_ctn.responsive_groupfriends_element { visibility:visible !important; }
 
-/* Profil: PopUp Fenster */
+/* Profil: Unterseite Erfolge */
+.achieveBarProgress, .achievementProgressBar .progress { background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); }
+
+/* Profil: PopUp Fenster, Dropdown etc. */
 div.newmodal { max-width: 600px !important;} 
 .newmodal_background { background: #161a1f !important; }
 .modal_top_bar { background: none !important; }
 .newmodal_content_border { padding:0px !important; }
 .newmodal_header { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-top: 1px solid #bac0c6; }
 .newmodal_content { border-left:1px solid #bac0c6; border-right:1px solid #bac0c6; border-bottom: 1px solid #bac0c6; }
+div#screenshot_upload_button { height:27px !important; }
+span#ScreenshotUploadLink, a#ScreenshotManagementToggle { border-radius:unset !important; background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
+#ScreenshotUploadLink:hover, #VideoUploadLink:hover { color: wheat !important; }
+div#ScreenshotManagementControls { width:946px !important; border: 1px solid rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important;}
+#ScreenshotManagementInstructions { color:#acb2b8 !important; }
+a#ScreenshotUploadLink, #VideoUploadLink { border-radius: unset !important; background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
 
-/* Global: Buttonhorror >.< */
+/* Global: Buttonhorror & Tabs >.< */
 a#VoteUpBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, a#VoteDownBtn.btnv6_blue_hoverfade.btn_medium.ico_hover, div#VoteUpDownBtnCtn.controlblock.review_create_vote_controls { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 a.btnv6_lightblue_blue.btnv6_border_2px.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important;	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; }
 .btn_green_steamui.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
