--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -4,6 +4,9 @@
   Library Anpassungen: Januar 2021
 */
 /* Menüs & Hintergründe */
+body {
+	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+}
 .libraryhome_UpdatesContainer_17uEB {
 	display:none !important;
 }
@@ -39,6 +42,9 @@
 	transform: none !important;
 }
 /* Erfolge & Badges */
+.appdetailsachievementssection_AchievementProgressContainer_3ns91 .appdetailsachievementssection_AchievementProgress_3Rm36 {
+	background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0));
+}
 .appdetailsachievementssection_Icon_zcasg.appdetailsachievementssection_IconGlow_2V3rF {
     box-shadow: 0px 0px 2px 1px rgba(133, 140, 153, 0.6) !important;
 }
@@ -124,9 +130,17 @@ animation-duration: 0s !important;
 .allcollections_Collection_3IWn- .allcollections_CollectionImage_2ERAQ .allcollections_DisplayCaseContainer_3vMgn {
 transform-style:unset !important;
 }
-/* Hotfix Review-Awards */
+/* Hotfix bei kleinem Fenster für Award Icons und versetzte Schriften */
 .awardicon_IconList_2cI0L {
     flex-flow: wrap !important;
+}
+button.DialogButton.appdetailsbutton_AppDetailsButton_3Cdin.appdetailsbutton_BottomRight_3nJyY {
+	padding: 0px 0px !important;
+	text-align:left !important;
+}
+.appdetailsdlcsection_DLCSection_2ycfN .appdetailsdlcsection_ButtonContainer_3VNB7 {
+    flex-flow: wrap !important;
+    justify-content: space-between;
 }
 /* Avatare */
 .awayOrSnooze .steamavatar_avatarStatus_3xUpb.bottom {
