--- a/skins/PenginUI/resource/webkit.css
+++ b/skins/PenginUI/resource/webkit.css
@@ -42,8 +42,7 @@
 */
 
 /* Global und Startseite */
-body { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important; }
-
+body { font-family: Arial,Helvetica,sans-serif !important; }
 a:link { color:#bac0c6 !important; }
 a:visited { color:#bac0c6 !important; }
 a:hover { color:wheat !important; }
@@ -94,6 +93,9 @@ a.selected.featured, .navigation_bar > a.selected, .navigation_bar > a:hover { b
 .apphub_sectionTab, a.apphub_sectionTab, .apphub_responsive_tab .responsive_tab_control { background-color: #3A3A3A !important; }
 .forumtopic_comments .commentthread_comment_text .content_check_warning, .forumtopic_comments .commentthread_comment_text .needs_content_check { color: rgb(172, 178, 184); border-color: rgb(74, 84, 94) !important; background: rgb(22, 26, 31) !important; border: 1px solid #56707f; width: 480px; padding: 12px; text-align: center; border-radius: 3px; }
 .apphub_sectionTab.active > span, .apphub_responsive_tab .responsive_tab_control .responsive_tab_control_inner { background: #2b3338 !important; font-weight: bold; text-decoration: underline; }
+body.v6 .store_nav .popup_menu .hr, body.v6 #footer_nav .popup_menu .hr { background-color: #161a1e !important; }
+.store_nav .tab:hover > span, .store_nav .tab:hover, .store_nav .tab.focus > span, .store_nav .tab.focus { background-image: none !important; }
+.popup_menu_twocol > .popup_menu:not(:first-child):not(:nth-child(4)) { border-left: 1px solid #161a1e !important; }
 
 /* Remoteplay */
 .rpt_anywhere_header_left, .remoteplay_howto_section, .rpt_anywhere_how_ctn, .rpt_section1_container, .rpt_section2_container, .rpt_section3_container, .rpt_section4_container { background:none !important; background-color: none !important; }
@@ -210,6 +212,7 @@ a.btnv6_lightblue_blue.btnv6_border_2px.btn_medium { background: -webkit-linear-
 .btn_darkblue_white_innerfade > span, .btn_medium > span, .btn_profile_action > span  { background: none !important; }
 a.btnv6_white_transparent.btn_small_thin.follow_button, a.btnv6_white_transparent.btn_small_tall.btn_uppercase, a.btnv6_white_transparent.btn_small.btn_uppercase, a.btn_darkblue_white_innerfade.btn_medium, a.big_button, a.big_button:hover, .btn_profile_action, a.btn_profile_action.btn_medium { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
 .btnv6_white_transparent:not(.btn_disabled):not(:disabled):not(.btn_active):not(.active):hover, .btn_darkblue_white_innerfade:not(.btn_disabled):not(:disabled):not(.btn_active):not(.active):hover { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
+.home_tab.active .tab_content, .tabarea .tab.active .tab_content, .btn_small_tall > span, input.btn_small_tall { background: -webkit-linear-gradient(top, #4c4e5a 0%,#2e3338 100%) !important; background: -moz-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: -o-linear-gradient(top, #4c4e5a 0%,#2e3338 100%);	background: -ms-linear-gradient(top, #4c4e5a 0%,#2e3338 100%); background: linear-gradient(top, #4c4e5a 0%,#2e3338 100%); }
 
 /* Diskussionsbereiche und Warnmeldungen */
 .commentthread_comment.hidden_post { display: none !important; }
