--- a/steamui/css/library.css
+++ b/steamui/css/library.css
@@ -1,12 +1,13 @@
 /*
   Template: PenginUI - v0.99.8 - Stand 12.01.2021
-  © Copyright - www.gameindustry.eu
+  Copyright - www.gameindustry.eu
   Library Anpassungen: Januar 2021
 */
 /* Menüs & Hintergründe */
-body {
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+body, .appdetailssection_AppDetailsSection_2r4TK {
+	font-family: Arial,Helvetica,sans-serif !important;
 }
+div.profile_animated_background { preload: none !important; }
 .libraryhome_UpdatesContainer_17uEB {
 	display:none !important;
 }
@@ -43,6 +44,9 @@ body {
 }
 /* Erfolge & Badges */
 .appdetailsachievementssection_AchievementProgressContainer_3ns91 .appdetailsachievementssection_AchievementProgress_3Rm36 {
+	background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0));
+}
+.appdetailsplaysection_DetailsProgressContainer_25YVD .appdetailsplaysection_DetailsProgressBar_1FnTq {
 	background: rgba(185, 255, 83, 1.0); background: -webkit-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: -moz-linear-gradient(top, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0)); background: linear-gradient(to bottom, rgba(185, 255, 83, 1.0), rgba(49, 147, 48, 1.0));
 }
 .appdetailsachievementssection_Icon_zcasg.appdetailsachievementssection_IconGlow_2V3rF {
@@ -130,7 +134,24 @@ animation-duration: 0s !important;
 .allcollections_Collection_3IWn- .allcollections_CollectionImage_2ERAQ .allcollections_DisplayCaseContainer_3vMgn {
 transform-style:unset !important;
 }
-/* Hotfix bei kleinem Fenster für Award Icons und versetzte Schriften */
+/* Avatare */
+.awayOrSnooze .steamavatar_avatarStatus_3xUpb.bottom {
+	-webkit-mask:unset !important;
+	}
+div.steamavatar_avatarHolder_nibod.avatarHolder.no-drag.Medium.offline, div.steamavatar_avatarHolder_nibod.avatarHolder.no-drag.Small.offline {
+	filter: contrast(100%) grayscale(1) !important;
+	}
+/* Broadcasting */
+div.appdetailssection_AppDetailsSection_2r4TK div.appdetailssectionheader_SectionHeader_1Q2q_ div.appdetailssection_AppDetailsSectionContainer_31ptF.appdetailssection_RightColumnSection_3KfxI {
+	display:none !important;
+	}
+div.appdetailssectionheader_Label_1SQ30 {
+	display:none !important;
+	}
+div.appdetailssection_AppDetailsSectionContainer_31ptF.appdetailssection_AppDetailsSectionHasLabel_2G5B7 div.appdetailssection_Body_5uvIN.appdetailsbroadcastsection_Body_CFp7F {
+	display:none !important;
+	}
+/* Hotfixes bei kleinem Fenster für Award Icons und Grafiken */
 .awardicon_IconList_2cI0L {
     flex-flow: wrap !important;
 }
@@ -142,12 +163,7 @@ button.DialogButton.appdetailsbutton_AppDetailsButton_3Cdin.appdetailsbutton_Bot
     flex-flow: wrap !important;
     justify-content: space-between;
 }
-/* Avatare */
-.awayOrSnooze .steamavatar_avatarStatus_3xUpb.bottom {
-	-webkit-mask:unset !important;
-}
 /* Ende */
-
 .index_Container_2mu1w {
   width: 100%;
   height: 100%;
